--- a/README
+++ b/README
@@ -6,14 +6,17 @@ infra, configuration, and execution requirements, and then provision
 them in the cloud.
 
 1.  Intro  
-2.  Requirements  
-3.  Python version  
-4.  Core packages  
-5.  Tutorial  
-6.  Documentation  
-7.  Hadoop Example  
-8.  Roadmap (yet to come)  
-9.  Acknowledgements
+2.  Installing  
+3.  Basic  
+4.  IDE install  
+5.  Requirements  
+6.  Python version  
+7.  Core packages  
+8.  Tutorial  
+9.  Documentation  
+10. Hadoop Example  
+11. Roadmap (yet to come)  
+12. Acknowledgements
 
 Intro
 -----
@@ -68,6 +71,63 @@ classes' content highly variable.
 
 Actuator models can be related to each other so that their structure and
 data can inform and sometimes drive the content of other models.
+
+Installing
+----------
+
+Basic
+
+The best way to try Actuator out is to create a virtual Python
+environment with virtualenv and then use pip to install Actuator into it
+(virtualenv will take care of installing pip for you). After you fetch
+virtualenv and install it into your global Python 2.7, you can create an
+"Actuator test" (at) environment under your home directory with the
+following command:
+
+    ~/tmp$ virtualenv --no-site-packages ~/at
+
+You then need to activate the environment to work in it; do that with
+the following shell command:
+
+    ~/tmp$ source ~/at/bin/activate
+
+This will change your shell command prompt to now be prepended with the
+name of your virtual environment, in this case '(at)'. Clone the
+Actuator project and cd into the project root (where the setup.py file
+is). There, run the following pip command to install Actuator into your
+virtual environment:
+
+    (at)~/tmp/actuator/$ pip install .
+
+Now, while in your virtual environment, you can start Python and import
+Actuator:
+
+    (at)~/tmp/actuator$ python
+    Python 2.7.6 (default, Mar 22 2014, 22:59:56) 
+    [GCC 4.8.2] on linux2
+    Type "help", "copyright", "credits" or "license" for more information.
+    >>> from actuator import *
+    >>> 
+
+When you're done playing around with Actuator, remember to deactivate
+your virtual env:
+
+    (at)~/tmp/actuator$ deactivate
+    ~/tmp/actuator$
+
+IDE install
+
+To get the full value of Actuator, you'll want to use it from an IDE.
+Once you have a virtual environment set up, most IDEs provide a way add
+additional Python interpreters to choose from when you start a project.
+You can add the interpreter from the virtual environment created above,
+and the IDE will then know all about Actuator.
+
+The details vary from IDE to IDE, but there's lots of help on the web
+for this process. For instance, here are directions for adding
+interpreters to Eclipse using the PyDev plugin:
+
+http://pydev.org/manual_101_interpreter.html
 
 Requirements
 ------------
